WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129983
[iOS] media preferences not initialized correctly in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=129983
Summary
[iOS] media preferences not initialized correctly in WebKit2
Eric Carlson
Reported
2014-03-08 17:22:57 PST
mediaPlaybackAllowsInline and mediaPlaybackRequiresUserGesture are not initialized correctly in WebKit2.
Attachments
Proposed patch
(2.63 KB, patch)
2014-03-08 17:30 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-03-08 17:23:05 PST
<
rdar://problem/16147364
>
Eric Carlson
Comment 2
2014-03-08 17:30:28 PST
Created
attachment 226241
[details]
Proposed patch
WebKit Commit Bot
Comment 3
2014-03-08 18:12:44 PST
Comment on
attachment 226241
[details]
Proposed patch Clearing flags on attachment: 226241 Committed
r165345
: <
http://trac.webkit.org/changeset/165345
>
WebKit Commit Bot
Comment 4
2014-03-08 18:12:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug