[iOS] media preferences not initialized correctly in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=129983

Reviewed by Dan Bernstein.

* Shared/WebPreferencesStore.h: Initialize mediaPlaybackAllowsInline and
mediaPlaybackRequiresUserGesture correctly for iOS.


Canonical link: https://commits.webkit.org/147971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165345 268f45cc-cd09-0410-ab3c-d52691b4dbfc